--- a/manytomany/templates/index.html
+++ b/manytomany/templates/index.html
@@ -2,16 +2,16 @@
 <body>
 
         <h3>
-            <a href="{% url 'addp' %}">ADD PUBLISHER</a>
+            <a href="{% url 'addp' %}">ADD PUBLISHERs</a>
         </h3>
         <h3>
-            <a href="{% url 'viewp' %}">VIEW PUBLISHER</a>
+            <a href="{% url 'viewp' %}">VIEW PUBLISHERs</a>
         </h3>
         <h3>
-            <a href="{% url 'adda' %}">ADD ARTICLE</a>
+            <a href="{% url 'adda' %}">ADD ARTICLEs</a>
         </h3>
         <h3>
-            <a href="{% url 'viewa' %}">VIEW ARTICLE</a>
+            <a href="{% url 'viewa' %}">VIEW ARTICLEs</a>
         </h3>
 
         {% for x in messages %}
